about us team top spacing fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -248,6 +248,7 @@ background-color: #EFEFEF;
     margin-bottom: 50px;
   }
 }
+.team { margin-top: 100px; }
 .team-members {
   margin-bottom: 20px;
   .manan,
